alteração no fragmento cadastrar.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,16 +5,16 @@
     <string name="forgot_password">forgot password ?</string>
     <string name="sign_in">Sign In</string>
     <string name="email_id">Email Id</string>
-    <string name="password">Password</string>
-    <string name="or">or</string>
+    <string name="password">Senha</string>
+    <string name="or">Ou</string>
     <string name="don_t_have_an_account_sign_up">Don\'t have an account?sign up!</string>
-    <string name="permanent_address">Permanent Address</string>
-    <string name="first_name">First Name</string>
-    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
-    <string name="mobile_no">Mobile No.</string>
-    <string name="confirm_password">Confirm Password</string>
-    <string name="sign_up">Sign Up</string>
-    <string name="last_name">Last Name</string>
+    <string name="endereco">Endereço</string>
+    <string name="nome">Nome</string>
+    <string name="already_have_an_account_sign_in">Já tem uma conta? Entrar</string>
+    <string name="telefone_no">Celular No.</string>
+    <string name="confirmar_password">Confirmar Senha</string>
+    <string name="cadastrar">Cadastrar</string>
+    <string name="sobrenome">Sobrenome</string>
     <string name="don_t_worry_we_just_need_your_registered_email_address_and_its_done">Don\'t worry we just need your registered email address and its done!</string>
     <string name="provide_your_registered_email_here">Provide your registered email here</string>
     <string name="check_yout_inbox_after_clicking_the_button_above">Check yout inbox after clicking the button above</string>
